--- a/index.html
+++ b/index.html
@@ -313,40 +313,6 @@
             border-radius: 6px;
         }
 
-        .stats-badge {
-            position: absolute;
-            bottom: 16px;
-            right: 16px;
-            background: var(--warm-white);
-            padding: 20px 24px;
-            border-radius: 8px;
-            box-shadow: 0 12px 32px rgba(43, 43, 43, 0.15);
-            border: 1px solid var(--stone);
-            min-width: 200px;
-        }
-
-        .stats-badge .stat-row {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 12px;
-        }
-
-        .stats-badge .stat-row:last-child { margin-bottom: 0; }
-
-        .stats-badge .stat-label {
-            font-size: 12px;
-            color: var(--grey-500);
-            font-weight: 500;
-        }
-
-        .stats-badge .stat-value {
-            font-size: 20px;
-            font-weight: 700;
-            color: var(--copper);
-            letter-spacing: -0.01em;
-        }
-
         /* Section Styling */
         .section-label {
             text-align: center;
@@ -628,7 +594,6 @@
             nav ul { display: none; }
             .hero h1 { font-size: 36px; }
             .section-title { font-size: 28px; }
-            .stats-badge { position: static; margin-top: 20px; }
             .trust-indicators { flex-direction: column; gap: 20px; }
             .footer-grid { grid-template-columns: 1fr; gap: 40px; }
         }
@@ -721,20 +686,6 @@
             <div class="hero-image">
                 <div class="hero-image-wrapper">
                     <img src="Stop_Guessing__Start_Growing__version_1.png" alt="Data Dashboard Automation">
-                    <div class="stats-badge">
-                        <div class="stat-row">
-                            <span class="stat-label">Time Saved</span>
-                            <span class="stat-value">80%</span>
-                        </div>
-                        <div class="stat-row">
-                            <span class="stat-label">Projects</span>
-                            <span class="stat-value">70+</span>
-                        </div>
-                        <div class="stat-row">
-                            <span class="stat-label">Success Rate</span>
-                            <span class="stat-value">100%</span>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -841,7 +792,7 @@
                     <h3>DATASANJ</h3>
                     <p>Analytics consultancy helping business owners scale with automated reporting and reliable data systems. Microsoft Certified & Xero Advisor. Based in Canberra.</p>
                     <div class="footer-contact">
-                        <a href="mailto:d_zohal@datasanj.com">d_zohal@datasanj.com</a>
+                        <a href="/cdn-cgi/l/email-protection#2e4a715441464f426e4a4f5a4f5d4f4044004d4143"><span class="__cf_email__" data-cfemail="92f6cde8fdfaf3fed2f6f3e6f3e1f3fcf8bcf1fdff">[email&#160;protected]</span></a>
                         <a href="#">Canberra, ACT, Australia</a>
                     </div>
                 </div>
@@ -873,9 +824,3 @@
             </div>
 
             <div class="footer-bottom">
-                © 2025 DATASANJ | Analytics Consultancy by Zohal Zahir
-            </div>
-        </div>
-    </footer>
-</body>
-</html>
