--- a/services.html
+++ b/services.html
@@ -691,7 +691,7 @@
             <div class="pricing-grid">
                 <div class="pricing-card">
                     <h3>Quick Start</h3>
-                    <div class="price">$1,500 - $3,000</div>
+                    <div class="price">$1.5K - $3K</div>
                     <div class="price-note">Single deliverable</div>
                     <ul class="pricing-features">
                         <li>Single dashboard or automation</li>
@@ -706,7 +706,7 @@
                 <div class="pricing-card featured">
                     <div class="pricing-badge">Most Common</div>
                     <h3>Business System</h3>
-                    <div class="price">$5,000 - $15,000</div>
+                    <div class="price">$5K - $15K</div>
                     <div class="price-note">Full solution</div>
                     <ul class="pricing-features">
                         <li>Complete BI implementation</li>
@@ -721,7 +721,7 @@
 
                 <div class="pricing-card">
                     <h3>Enterprise / Government</h3>
-                    <div class="price">$15,000 - $25,000+</div>
+                    <div class="price">$15K - $25K+</div>
                     <div class="price-note">Custom scoped</div>
                     <ul class="pricing-features">
                         <li>Multi-department systems</li>
@@ -737,7 +737,7 @@
 
             <div style="text-align: center; margin-top: 60px; padding: 40px; background: var(--warm-white); border-radius: 8px; max-width: 800px; margin-left: auto; margin-right: auto;">
                 <h3 style="font-size: 20px; font-weight: 600; color: var(--charcoal); margin-bottom: 16px;">Monthly Partnership</h3>
-                <p style="font-size: 16px; color: var(--grey-600); margin-bottom: 20px;">Ongoing analytics support, continuous improvement, and priority access. <strong style="color: var(--copper);">$1,500 - $2,500/month AUD</strong> depending on scope and hours.</p>
+                <p style="font-size: 16px; color: var(--grey-600); margin-bottom: 20px;">Ongoing analytics support, continuous improvement, and priority access. <strong style="color: var(--copper);">$1.5K - $2.5K/month AUD</strong> depending on scope and hours.</p>
                 <a href="Contact.html" class="btn btn-primary">Discuss Retainer</a>
             </div>
 
