--- a/Portfolio.html
+++ b/Portfolio.html
@@ -773,7 +773,7 @@
                     <h3>DATASANJ</h3>
                     <p>Analytics consultancy helping business owners scale with automated reporting and reliable data systems. Microsoft Certified & Xero Advisor. Based in Canberra.</p>
                     <div class="footer-contact">
-                        <a href="/cdn-cgi/l/email-protection#14704b6e7b7c7578547075607567757a7e3a777b79"><span class="__cf_email__" data-cfemail="7e1a210411161f123e1a1f0a1f0d1f1014501d1113">[email&#160;protected]</span></a>
+                         <a href="mailto:d_zohal@datasanj.com">d_zohal@datasanj.com</a>
                         <a href="#">Canberra, ACT, Australia</a>
                     </div>
                 </div>
@@ -805,4 +805,5 @@
             </div>
 
             <div class="footer-bottom">
+
 
