--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
                     <h3>DATASANJ</h3>
                     <p>Analytics consultancy helping business owners scale with automated reporting and reliable data systems. Microsoft Certified & Xero Advisor. Based in Canberra.</p>
                     <div class="footer-contact">
-                        <a href="/cdn-cgi/l/email-protection#2e4a715441464f426e4a4f5a4f5d4f4044004d4143"><span class="__cf_email__" data-cfemail="92f6cde8fdfaf3fed2f6f3e6f3e1f3fcf8bcf1fdff">[email&#160;protected]</span></a>
+                         <a href="mailto:d_zohal@datasanj.com">d_zohal@datasanj.com</a>
                         <a href="#">Canberra, ACT, Australia</a>
                     </div>
                 </div>
