--- a/services.html
+++ b/services.html
@@ -764,7 +764,7 @@
                     <h3>DATASANJ</h3>
                     <p>Analytics consultancy helping business owners scale with automated reporting and reliable data systems. Microsoft Certified & Xero Advisor. Based in Canberra.</p>
                     <div class="footer-contact">
-                        <a href="/cdn-cgi/l/email-protection#71152e0b1e19101d311510051002101f1b5f121e1c"><span class="__cf_email__" data-cfemail="d9bd86a3b6b1b8b599bdb8adb8aab8b7b3f7bab6b4">[email&#160;protected]</span></a>
+                         <a href="mailto:d_zohal@datasanj.com">d_zohal@datasanj.com</a>
                         <a href="#">Canberra, ACT, Australia</a>
                     </div>
                 </div>
@@ -796,3 +796,4 @@
             </div>
 
             <div class="footer-bottom">
+
