--- a/index.html
+++ b/index.html
@@ -700,17 +700,17 @@
 
             <div class="problem-grid">
                 <div class="problem-card">
-                    <h3>📊 Drowning in Spreadsheets</h3>
+                    <h3>📄 Drowning in Spreadsheets</h3>
                     <p>You're copying data between five different Excel files every week. One wrong formula and your whole report is off.</p>
                 </div>
 
                 <div class="problem-card">
-                    <h3>⏰ No Time for Strategy</h3>
+                    <h3>⌛ No Time for Strategy</h3>
                     <p>You spend so much time pulling reports that you can't actually use the data to make decisions.</p>
                 </div>
 
                 <div class="problem-card">
-                    <h3>🔗 Systems Don't Talk</h3>
+                    <h3>💬 Systems Don't Talk</h3>
                     <p>Xero, Salesforce, Google Sheets—they all have pieces of the puzzle, but nothing connects.</p>
                 </div>
             </div>
