--- a/About.html
+++ b/About.html
@@ -862,7 +862,7 @@
             <div class="footer-grid">
                 <div class="footer-brand">
                     <h3>DATASANJ</h3>
-                    <p>Analytics consultancy helping business owners scale with automated reporting and reliable data systems. Microsoft Certified & Xero Advisor. Based in Canberra.</p>
+                    <p>Power BI and Excel Consultant based in Canberra,Australia. Microsoft Certified & Xero Advisor. </p>
                     <div class="footer-contact">
                         <a href="mailto:d_zohal@datasanj.com">d_zohal@datasanj.com</a>
                         <a href="#">Canberra, ACT, Australia</a>
@@ -902,3 +902,4 @@
     </footer>
 </body>
 </html>
+
