--- a/Blog.html
+++ b/Blog.html
@@ -825,7 +825,7 @@
             <div class="footer-grid">
                 <div class="footer-brand">
                     <h3>DATASANJ</h3>
-                    <p>Professional data analytics consultancy by Zohal Zahir. Based in Canberra, serving businesses locally and internationally.</p>
+                    <p>Power BI and Excel Consultant based in Canberra,Australia. Microsoft Certified & Xero Advisor.</p>
                     <div class="footer-contact">
                         <a href="mailto:d_zohal@datasanj.com">d_zohal@datasanj.com</a>
                         <a href="#">Canberra, ACT, Australia</a>
