--- a/services.html
+++ b/services.html
@@ -685,7 +685,7 @@
     <section class="pricing-section">
         <div class="container">
             <div class="section-label">Investment Guide</div>
-            <h2 class="section-title">Flexible Pricing for Every Business</h2>
+            <h2 class="section-title">Flexible Pricing for Every Business.</h2>
             <p class="section-subtitle">From simple dashboards to enterprise systems. Projects scoped to your needs and budget. All prices in AUD.</p>
 
             <div class="pricing-grid">
@@ -762,7 +762,7 @@
             <div class="footer-grid">
                 <div class="footer-brand">
                     <h3>DATASANJ</h3>
-                    <p>Analytics consultancy helping business owners scale with automated reporting and reliable data systems. Microsoft Certified & Xero Advisor. Based in Canberra.</p>
+                    <p>Power BI and Excel Consultant based in Canberra,Australia. Microsoft Certified & Xero Advisor. </p>
                     <div class="footer-contact">
                          <a href="mailto:d_zohal@datasanj.com">d_zohal@datasanj.com</a>
                         <a href="#">Canberra, ACT, Australia</a>
@@ -796,4 +796,5 @@
             </div>
 
             <div class="footer-bottom">
+
 
