--- a/index.html
+++ b/index.html
@@ -794,12 +794,12 @@
                     <p>Finance is in Excel, sales in your CRM, operations in another system—and nothing talks to each other.</p>
                 </div>
                 <div class="card">
-                    <div class="icon">🔴</div>
+                    <div class="icon">👎🏾</div>
                     <h3>Reports don't reconcile</h3>
                     <p>Different teams see different numbers because there's no single source of truth.</p>
                 </div>
                 <div class="card">
-                    <div class="icon">🚫</div>
+                    <div class="icon">⛔</div>
                     <h3>Too much access, or not enough</h3>
                     <p>People see data they shouldn't—or can't access what they need to do their job.</p>
                 </div>
