--- a/index.html
+++ b/index.html
@@ -816,18 +816,22 @@
 
             <div class="cards-grid">
                 <div class="card">
+                    <div class="icon">✔️</div>
                     <h3>Automate month-end reporting</h3>
                     <p>Cut your reporting time from days to hours—with fewer errors and full audit trails.</p>
                 </div>
                 <div class="card">
+                     <div class="icon">✔️</div>
                     <h3>Connect APIs to dashboards and spreadsheets</h3>
                     <p>Pull data directly from Xero, your CRM, or operations systems into Excel or Power BI—no more manual exports.</p>
                 </div>
                 <div class="card">
+                     <div class="icon">✔️</div>
                     <h3>Advanced UI design</h3>
                     <p>Excel systems that feel simple to use, with clean interfaces, hidden complexity, and role-based access.</p>
                 </div>
                 <div class="card">
+                     <div class="icon">✔️</div>
                     <h3>Dashboards built for decisions</h3>
                     <p>Power BI reports focused on what actually drives your business—not just pretty charts.</p>
                 </div>
