--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
                     <p>Excel systems that feel simple to use, with clean interfaces, hidden complexity, and role-based access.</p>
                 </div>
                 <div class="card">
-                    <div class="icon">📊</div>
+                    <div class="icon">📈</div>
                     <h3>Dashboards built for decisions</h3>
                     <p>Power BI reports focused on what actually drives your business—not just pretty charts.</p>
                 </div>
