--- a/index.html
+++ b/index.html
@@ -634,9 +634,9 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Reliable reporting for decisions that matter.</h1>
-                <p class="subtitle">I help organisations bring order, accuracy, and trust to their financial and operational reporting — using Excel and Power BI — without unnecessary rebuilds or disruption.</p>
-                <a href="Contact.html" class="hero-cta">Request a discovery call →</a>
+                <h1>I help finance and operations teams turn fragile Excel & Power BI reporting into accurate, automated dashboards—saving hours and building trust in every number.</h1>
+                <p class="subtitle">Microsoft-Certified Power BI Analyst & Data Science Graduate. I stabilise high-risk reporting systems, automate manual processes, and deliver insights businesses can rely on—without unnecessary rebuilds or disruption.</p>
+                <a href="Contact.html" class="hero-cta">Book a Free Consultation →</a>
             </div>
         </div>
     </section>
