--- a/About.html
+++ b/About.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Meet Zohal Zahir - Microsoft Certified Power BI consultant with 70+ successful projects. From medicine to data science, I build systems that actually work.">
-    <meta name="keywords" content="Zohal Zahir, Power BI consultant, Microsoft certified, Xero advisor, Canberra">
+    <meta name="keywords" content="Zohal Zahir, Power BI consultant, Microsoft certified, Excel VBA expert, Canberra">
     <meta name="author" content="Zohal Zahir">
     <title>About Zohal Zahir | Microsoft Certified Analytics Consultant</title>
     <link rel="canonical" href="https://datasanj.com/About.html">
@@ -648,9 +648,9 @@
             </div>
             <div class="hero-content">
                 <h1>Hi, I'm Zohal</h1>
-                <p class="title">Microsoft Certified · Xero Advisor · Canberra</p>
+                <p class="title">Microsoft Certified Power BI developer ·Financial reporting expert  · Canberra</p>
                 <p class="intro">
-                    I've delivered 70+ projects with 100% success. I build Power BI dashboards, automate Excel workflows, and connect systems that don't want to talk to each other. Business owners hire me when they're ready to scale but their spreadsheets aren't.
+                    I've delivered 70+ projects with 100% success. I build Power BI dashboards, automate Excel workflows, and connect systems . Business owners hire me when they're ready to scale but their spreadsheets aren't.
                 </p>
                 <div class="credentials-badges">
                     <span class="badge featured">Microsoft Certified</span>
@@ -902,4 +902,5 @@
     </footer>
 </body>
 </html>
+
 
