--- a/About.html
+++ b/About.html
@@ -643,7 +643,7 @@
         <div class="container">
             <div class="hero-image-wrapper">
                 <div class="hero-image">
-                    <img src="Zohal Zahir.jpg" alt="Zohal Zahir">
+                    <img src="zohheadshot_Cropped.JPG" alt="Zohal Zahir">
                 </div>
             </div>
             <div class="hero-content">
@@ -902,5 +902,6 @@
     </footer>
 </body>
 </html>
+
 
 
