--- a/index.html
+++ b/index.html
@@ -152,9 +152,19 @@
         }
 
         .hero-content {
-            max-width: 900px;
-            margin: 0 auto;
-        }
+    display: grid;
+    grid-template-columns: 1.2fr 0.8fr;
+    gap: 50px;
+    align-items: center;
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+.hero-image img {
+    border-radius: 10px;
+    box-shadow: 0 12px 30px rgba(0,0,0,0.25);
+}
+
 
         .hero h1 {
             font-size: 48px;
@@ -597,6 +607,17 @@
             .focus-grid { grid-template-columns: 1fr; }
             .footer-grid { grid-template-columns: 1fr; gap: 40px; }
             .process-step { flex-direction: column; }
+            @media (max-width: 768px) {
+    .hero-content {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+
+    .hero-image {
+        margin-top: 20px;
+    }
+}
+
         }
     </style>
 </head>
@@ -634,10 +655,19 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>I help finance and operations teams turn fragile Excel & Power BI reporting into accurate, automated dashboards—saving hours and building trust in every number.</h1>
-                <p class="subtitle">Microsoft-Certified Power BI Analyst & Data Science Graduate. I stabilise high-risk reporting systems, automate manual processes, and deliver insights businesses can rely on—without unnecessary rebuilds or disruption.</p>
-                <a href="Contact.html" class="hero-cta">Book a Free Consultation →</a>
-            </div>
+
+    <div>
+        <h1>I help finance and operations teams turn fragile Excel & Power BI reporting into accurate, automated dashboards—saving hours and building trust in every number.</h1>
+        <p class="subtitle">Microsoft-Certified Power BI Analyst & Data Science Graduate. I stabilise high-risk reporting systems, automate manual processes, and deliver insights businesses can rely on—without unnecessary rebuilds or disruption.</p>
+        <a href="Contact.html" class="hero-cta">Book a Free Consultation →</a>
+    </div>
+
+    <div class="hero-image">
+        <img src="zohheadshot_Cropped.JPG" alt="Zohal Zahir headshot">
+    </div>
+
+</div>
+
         </div>
     </section>
 
