--- a/About.html
+++ b/About.html
@@ -643,14 +643,14 @@
         <div class="container">
             <div class="hero-image-wrapper">
                 <div class="hero-image">
-                    <img src="zohheadshot_Cropped.JPG" alt="Zohal Zahir">
+                    <img src="zoh (2).jpg" alt="Zohal Zahir">
                 </div>
             </div>
             <div class="hero-content">
                 <h1>Hi, I'm Zohal</h1>
                 <p class="title">Microsoft Certified Power BI developer ·Financial reporting expert  · Canberra</p>
                 <p class="intro">
-                    I've delivered 70+ projects with 100% success. I build Power BI dashboards, automate Excel workflows, and connect systems . Business owners hire me when they're ready to scale but their spreadsheets aren't.
+                    I've delivered 75+ projects with 100% success. I build Power BI dashboards, automate Excel workflows, and connect systems . Business owners hire me when they're ready to scale but their spreadsheets aren't.
                 </p>
                 <div class="credentials-badges">
                     <span class="badge featured">Microsoft Certified</span>
@@ -902,6 +902,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
